<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.avaje</groupId>
    <artifactId>tests</artifactId>
    <version>2.0-RC2</version>
  </parent>

  <artifactId>test-nima-jsonb</artifactId>

  <properties>
    <java.release>20</java.release>
    <maven.compiler.source>20</maven.compiler.source>
    <maven.compiler.target>20</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <surefire.useModulePath>false</surefire.useModulePath>
  </properties>


  <dependencies>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-inject</artifactId>
      <version>${avaje-inject.version}</version>
    </dependency>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-http-api</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-jsonb</artifactId>
      <version>1.6-RC6</version>
    </dependency>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-http-hibernate-validator</artifactId>
      <version>3.3</version>
    </dependency>
    <dependency>
      <groupId>io.helidon.nima.webserver</groupId>
      <artifactId>helidon-nima-webserver</artifactId>
      <version>${nima.version}</version>
    </dependency>
    <dependency>
      <groupId>io.helidon.nima.http.media</groupId>
      <artifactId>helidon-nima-http-media-jsonb</artifactId>
      <version>${nima.version}</version>
    </dependency>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-http-client</artifactId>
      <version>${project.version}</version>
    </dependency>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-inject-generator</artifactId>
      <version>${avaje-inject.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-jsonb-generator</artifactId>
      <version>1.6-RC6</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-http-helidon-generator</artifactId>
      <version>${project.version}</version>
      <scope>provided</scope>
    </dependency>
    
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>junit</artifactId>
      <version>1.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <enablePreview>true</enablePreview>
          <release>20</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <argLine>--enable-preview</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>io.repaint.maven</groupId>
        <artifactId>tiles-maven-plugin</artifactId>
        <version>2.34</version>
        <extensions>true</extensions>
        <configuration>
          <tiles>
            <tile>org.avaje.tile:lib-classpath:1.1</tile>
          </tiles>
        </configuration>
      </plugin>
      <plugin>
        <groupId>io.avaje</groupId>
        <artifactId>avaje-inject-maven-plugin</artifactId>
        <version>1.0</version>
        <executions>
          <execution>
            <phase>process-sources</phase>
            <goals>
              <goal>provides</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>


</project>
